@@ -64,6 +64,8 @@ Revision history for Perl module Math::Prime::Util
     - Fix v0.62 breaking extended precision long doubles on some machines.
       Big difference in epsilon-level precision for LambertW, Li, Zeta.
 
+    - sieve_range documentation for depth didn't exactly match the XS code.
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.
